<resources>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">购买基金</string>
    <string name="title_net">全网数据</string>
    <string name="title_mine">我的</string>
    <string name="wallet_pwd_notice">密码用于保护私钥和交易授权，强度非常重要</string>
    <string name="wallet_remember_notice">BTW不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="pwd_check_login">登录</string>
    <string name="pwd_check_chanage_account">切换账户</string>
    <string name="pwd_check_title">密码验证</string>
    <string name="copy_bord_content">已复制剪切板</string>
    <string name="load_wallet_by_mnemonic_input_tip">请检查您的助记词</string>
    <string name="load_wallet_already_exist">钱包已存在</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="account_name_notice">账号不能为空</string>
    <string name="pwd_check_wrong_pwd">密码错误</string>
    <string name="pwd_check_input_pwd">请输入密码</string>
    <string name="xmain_table_one">资产</string>
    <string name="xmain_table_two">发现</string>
    <string name="xmain_table_three">交易</string>
    <string name="xmain_table_four">我的</string>
    <string name="xmain_table_shouye">首页</string>
    <string name="mine_manage_wallet">管理钱包</string>
    <string name="mine_trade_list">转账记录</string>
    <string name="mine_msg_center">消息中心</string>
    <string name="mine_contact_people">联系人</string>
    <string name="mine_system_set">系统设置</string>
    <string name="mine_help_center">帮助中心</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_system_adress_peo">地址簿</string>
    <string name="trade_list_remark">最近交易记录</string>
    <string name="trade_list_zhuanzhang">转账</string>
    <string name="trade_list_shoukuan">收款</string>
    <string name="trade_list_title">转账记录</string>
    <string name="history_weituo_title">历史委托</string>
    <string name="trade_detail_title">交易记录</string>
    <string name="trade_detail_no_data">暂无</string>
    <string name="trade_detail_fakuan">发款方</string>
    <string name="trade_detail_shoukuan">收款方</string>
    <string name="trade_detail_kuangongfei">旷工费用</string>
    <string name="trade_detail_beizhu">备注</string>
    <string name="trade_detail_beizhu_two">请输入备注</string>
    <string name="trade_detail_jiaoyihao">交易号</string>
    <string name="trade_detail_qukuai">区块</string>
    <string name="trade_detail_jiaoyitime">交易时间</string>
    <string name="trade_detail_copyurl">复制</string>
    <string name="trade_detail_bvw_remark">请输入备注内容</string>
    <string name="account_manage_title">管理钱包</string>
    <string name="account_manage_import_wallet">导入钱包</string>
    <string name="wallet_detail_name">的钱包</string>
    <string name="wallet_detail_name_sign">钱包名</string>
    <string name="wallet_detail_update_pwd">修改密码</string>
    <string name="wallet_detail_export_store">导出私钥</string>
    <string name="wallet_detail_export_keystore">导出Keystore</string>
    <string name="wallet_detail_del_wallet">删除钱包</string>
    <string name="empty_pwd">密码值不能为空</string>
    <string name="pwd_not_encough">密码太简单,不能低于六位数</string>
    <string name="update_success">修改成功</string>
    <string name="update">修改中</string>
    <string name="private_key_put_pwd">请输入密码</string>
    <string name="private_key_sign">私钥</string>
    <string name="jiexi_private_key">解析私钥</string>
    <string name="private_key_jiexie_input">请输入密码，点击 解析私钥 按钮</string>
    <string name="private_key_notice">为保证安全，请尽量在断网的情况下进行此操作!</string>
    <string name="wrong_pwd">密码错误</string>
    <string name="long_click_copy_content">长按可复制文本</string>
    <string name="export_key_title">导出Keystore</string>
    <string name="export_key_share">系统分享</string>
    <string name="share_txt">分享</string>
    <string name="shoukuan_code">收款码</string>
    <string name="shoukuan_copy_url">复制收款地址</string>
    <string name="trade_sign_title">转账</string>
    <string name="trade_no_money">当前账号暂无余额，无法进行转账</string>
    <string name="trade_wrong_data">交易异常</string>
    <string name="trade_success">转账成功</string>
    <string name="trade_input_wallet_address">请输入钱包地址</string>
    <string name="trade_input_wallet_num">请输入转账数量</string>
    <string name="trade_to_wallet_address">收款人钱包地址</string>
    <string name="trade_to_wallet_address_two">请输入地址</string>
    <string name="trade_money_num">转账金额</string>
    <string name="trade_money_num_two">请输入转账金额</string>
    <string name="trade_select_corn">选择币种</string>
    <string name="trade_next_step">下一步</string>
    <string name="set_title">设置</string>
    <string name="set_language">语言</string>
    <string name="set_update_check">检查更新</string>
    <string name="set_language_chinese">中文</string>
    <string name="set_language_english">英文</string>
    <string name="set_select_language">选择语言</string>
    <string name="login_out">退出</string>
    <string name="lead_in_title">导入账户</string>
    <string name="lead_into_wallet">导入钱包</string>
    <string name="lead_in_zjc_notice">请输入账户的助记词（12个英文单词），按空格隔开</string>
    <string name="lead_in_zjc_notice_2">助记单词 (使用空格分隔)</string>
    <string name="lead_in_account_name">钱包名字</string>
    <string name="lead_in_input_name">请设置钱包名字</string>
    <string name="lead_in_set_pwd">设置密码</string>
    <string name="lead_in_sure_pwd">请输入密码</string>
    <string name="lead_in_begin_import">开始导入</string>
    <string name="lead_in_check_private_key">请检查您的私钥</string>
    <string name="lead_in_copy_private_key">粘贴私钥（Private Key）至输入框内</string>
    <string name="lead_in_two_pwd">确认密码</string>
    <string name="zjc_title">你的钱包助记词</string>
    <string name="zjc_notice_sign">强烈建议您将助记词抄写在纸上并保存在只有你知道的安全地方，任何人得到助记词都可以消费您的数字资产</string>
    <string name="zjc_remeber_sign">助记词用于恢复你的钱包，丢失他们你将永远失去钱包</string>
    <string name="zjc_long_copy">长按下方助记词，可复制到剪切板</string>
    <string name="zjc_beifen_title">备份助记词</string>
    <string name="zjc_check_fail">验证失败，请检查备份</string>
    <string name="zjc_check_successs">校验成功</string>
    <string name="zjc_sure_view">确认你的助记词</string>
    <string name="zjc_click_in_order">请按顺序点击助记词，以确保你的备份助记词正确</string>
    <string name="sure_sure">确定</string>
    <string name="wallet_create_title">创建钱包</string>
    <string name="wallet_create_xieyi">请阅读并同意隐私协议</string>
    <string name="wallet_create_sign_name">请填写钱包名称</string>
    <string name="wallet_create_sign_pwd">请填写钱包密码</string>
    <string name="wallet_create_sign_repeat_pwd">请填写钱包重复密码</string>
    <string name="wallet_create_sign_pwd_not">密码与重复密码不相同</string>
    <string name="wallet_name">钱包名称</string>
    <string name="wallet_pwd">密码</string>
    <string name="wallet_pwd_six">六位及以上密码</string>
    <string name="wallet_repeat_pwd_six">重复六位及以上密码</string>
    <string name="wallet_repeat_pwd">重复密码</string>
    <string name="wallet_xieyi"> 我已经仔细阅读并同意</string>
    <string name="wallet_xieyi_content">《服务及隐私条款》</string>
    <string name="wallet_xieyi_content_two">服务及隐私条款</string>
    <string name="load_data">加载中</string>
    <string name="loading_wallet_tip">导入钱包中…</string>
    <string name="loading_wallet_sign_two">导入钱包</string>
    <string name="universal_text_typeface">PingFangRegular</string>
    <string name="universal_text_typeface_bold">PingFangBold</string>
    <string name="wallet_first_view">人类第一次尝试用一种永续的方式\n让人类科技进行自我复制繁殖</string>
    <string name="create_aacoutn_view">创建账户</string>
    <string name="about_us_title">关于我们</string>
    <string name="about_us_content">  BTW（BITWORLD）区块链网络是一个在以太坊和比特币网络上利用layer2层技术进行区块链网络扩容的解决方案。BTW在BVW 480000区块正式开启BTW网络硬分叉，BTW硬分叉网络主要工作将在比特币和以太坊网络中建立一条layer2层的区块链网络来降低BTC 和ETH结算的成本，当用户在比特币和以太坊小额交易转账时，可以选择使用BTW layer2网络来进行结算，成本仅是原来成本的1%，BTW开发者社区致力于在完全去中心化的前提下，不断的探索layer2 layer3在dapp应用中的开发和实践.</string>
    <string name="help_title">使用帮助</string>
    <string name="del_wallet_fail">删除失败</string>
    <string name="no_data">暂无相关数据</string>
    <string name="no_data_two">暂无数据~</string>
    <string name="msg_receive_sign">接收方:</string>
    <string name="dialog_success_sign">已提交给矿工，确认中！</string>
    <string name="dialog_fail_sign">转账失败</string>
    <string name="update_compare_sign">当前已是最新版本</string>
    <string name="trade_left_money_val">可用余额</string>
    <string name="add_contact_complete">完成</string>
    <string name="add_contact_remark_sign">备注内容不能超过十个字符</string>
    <string name="add_contack_people_sign">备注</string>
    <string name="add_contack_wrong_wallet_address">钱包地址不合法</string>
    <string name="add_contack_address_success">恭喜你！新建完成</string>
    <string name="add_contack_address_fail">新建失败</string>
    <string name="add_contack_create_new_people_title">新建联系人</string>
    <string name="add_contack__people_right">新建</string>
    <string name="add_contack__people_title">联系人</string>
    <string name="add_contack_people_item_name">未定义</string>
    <string name="msg_center_list_title">消息中心</string>
    <string name="trade_beizhu_notice">备注内容太长，不要超过30个字符</string>
    <string name="language">语言</string>
    <string name="follow_the_system">跟随系统</string>
    <string name="create_wallet_sign_content">生成钱包</string>
    <string name="manage">管理</string>
    <string name="back_up_wallet_private_key">备份私钥</string>
    <string name="back_up_wallet_walletsign">备份钱包</string>
    <string name="view_backup_details_tutorial">查看备份详细教程</string>
    <string name="create_wallet_last_step">最后一步：立即备份你的钱包私钥</string>
    <string name="create_wallet_last_step_two">最后一步：立即备份你的钱包</string>
    <string name="create_wallet_last_notice_sign">直接复制粘帖以太坊官方钱包 keystore 文件内容至输入框。或者通过生成 keystore 内容的二维码，扫描录入。</string>
    <string name="public_key">公钥</string>
    <string name="direct_import_login">直接导入登录</string>
    <string name="copy">复制</string>
    <string name="back_up_private_sign_view">请备份你的私钥</string>
    <string name="back_up_private_txt">请抄录下来,或者存在某个地方，千万不要保存在网络上</string>
    <string name="send_trade_state_ing">确认中</string>
    <string name="send_trade_state_succ">转账成功</string>
    <string name="send_trade_state_succ_two">收款成功</string>
    <string name="send_trade_state_fail">转账失败</string>
    <string name="send_trade_state_notice">转账通知:</string>
    <string name="update_pwd_new_content">请输入新密码</string>
    <string name="update_nickname_new_content">请输入新的钱包名</string>
    <string name="update_wallet_name">修改钱包名称</string>
    <string name="dialog_wallet_one">是否切换到当前钱包?</string>
    <string name="dialog_wallet_two">取消</string>
    <string name="dialog_wallet_three">确定</string>
    <string name="dialog_wallet_four">请慎重，此操作无法撤销</string>
    <string name="wallet_delete_sign">删除成功</string>
    <string name="trade_money_to_much">当前转账金额大于余额</string>
    <string name="trade_money_to_low">转账额度不能为零</string>
    <string name="wallet_manage_sign">当前账户</string>
    <string name="wallet_trade_after_notice">转账金额最多支持到小数点后六位</string>
    <string name="wrong_private_key">私钥错误</string>
    <string name="wrong_zjc_wrong">助记词错误</string>
    <string name="repeat_wallet_val">钱包已存在</string>
    <string name="find_fenlie">分裂</string>
    <string name="find_fenlie_intro">多币种参与价值共识</string>
    <string name="find_jiaoyi">交易所</string>
    <string name="find_jiaoyi_info">去中心化交易所</string>
    <string name="find_chat">CHAT</string>
    <string name="find_chat_info">去中心化匿名交友</string>
    <string name="find_zhineng_info">日息0.5% 不锁本金 随进随出</string>
    <string name="find_zhineng_content">智能引擎</string>
    <string name="find_guangao">广告沙盒</string>
    <string name="find_guangao_info">场内、场外广告扩散</string>
    <string name="find_fatie">匿名发帖</string>
    <string name="lead_in_zjc_sign">助记词</string>
    <string name="lead_in_sy_sign">私钥</string>
    <string name="stop_txt_one">BTW起源于全球开发者社区。致力于用最先进的区块链技术，为区块链应用落地带来新的思维和实践启发，BTW的任何运营和技术均代表着一种技术社会实验，请谨慎参与。由于目前世界上主要国家对数字货币交易和区块链项目的态度政策尚不明确，BTW将严格遵守世界各国对数字资产方面的相关法律，作出以下声明。</string>
    <string name="stop_txt_two"> BTW将不向以下国家和地区：美国、中国大陆、中国香港地区、朝鲜、古巴、伊朗、孟加拉国、马来西亚、叙利亚、玻利维亚，等用户提供使用。</string>
    <string name="stop_txt_three">BTW属于完全去中心化应用，无法有效进行KYC认证审核，运行期间，以上国家用户，请自觉删除和退出。</string>
    <string name="stop_notice_sign">禁止声明</string>
</resources>