<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="zjc"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/lead_in_zjc_notice_2"
                android:textSize="13dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/import_zjc_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_110dp"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:background="#394469"
                android:gravity="top"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_color_tip_94A0C1"
                android:textSize="14dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_account_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/wallet_pwd"
                    android:inputType="textPassword"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_color_tip_94A0C1"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#575669" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lead_in_two_pwd"
                    android:visibility="gone"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/input_account_pwd_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/wallet_repeat_pwd"
                    android:inputType="textPassword"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_color_tip_94A0C1"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#575669" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:text="@string/wallet_xieyi"
                    android:textColor="@color/text_color_tip_94A0C1"
                    android:button="@drawable/selector_check_box_selected"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_fuwu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_xieyi_content"
                    android:textSize="12dp"
                    android:textColor="@color/color_4D66FF" />
            </LinearLayout>

            <TextView
                android:id="@+id/input_submit_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_41dp"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_80dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_4D66FF"
                android:text="@string/lead_in_begin_import"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                 />

            <TextView
                android:id="@+id/lead_in_create_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/create_wallet_sign_content"
                android:textSize="15dp"
                android:textColor="@color/text_color_tip_94A0C1"
                 />

        </LinearLayout>


    </ScrollView>
</layout>
