<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/stop_notice_sign"
        android:textColor="@color/white"
        android:textSize="20dp"></TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@mipmap/stop_notice_sign"></ImageView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="left"
                android:lineSpacingExtra="2dp"
                android:text="@string/stop_txt_one"
                android:textColor="@color/white"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="left"
                android:lineSpacingExtra="2dp"
                android:text="@string/stop_txt_two"
                android:textColor="@color/white"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="left"
                android:lineSpacingExtra="2dp"
                android:text="@string/stop_txt_three"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/stop_sure_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/color_4D66FF"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/i_know"
                android:textColor="@color/white"
                android:textSize="20dp"
                ></TextView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

