<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <com.whdx.base.ui.view.CustomTitleBarView
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_textStr="@string/create_wallet"
            app:text_color="@color/white"
            app:isShow_left_img="true" />

        <LinearLayout
            android:id="@+id/lay_content_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleBar"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginRight="20dp">

            <View
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:background="@drawable/circle_bg_view" />

            <!--            app:typeface="@string/universal_text_typeface"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:text="@string/wallet_pwd_notice"
                android:textColor="@color/text_color_tip_94A0C1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lay_content_view"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginRight="20dp">

            <View
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:background="@drawable/circle_bg_view"></View>

            <!--            app:typeface="@string/universal_text_typeface"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:text="@string/wallet_remember_notice"
                android:textColor="@color/text_color_tip_94A0C1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lay2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editWalletName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/wallet_name"
                android:lines="1"
                android:gravity="bottom"
                android:visibility="gone"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_94A0C1"
                android:textSize="15dp" />

            <View
                android:visibility="gone"
                style="@style/LineStyle" />

            <EditText
                android:layout_marginTop="@dimen/dimen_10dp"
                android:id="@+id/editWalletPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:paddingBottom="5dp"
                android:lines="1"
                android:textColorHint="@color/text_color_tip_94A0C1"
                android:textSize="15dp" />

            <View
                style="@style/LineStyle" />

            <EditText
                android:id="@+id/editRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:textColor="@color/white"
                android:hint="@string/wallet_repeat_pwd"
                android:inputType="textPassword"
                android:lines="1"
                android:gravity="bottom"
                android:paddingBottom="5dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:textColorHint="@color/text_color_tip_94A0C1"
                android:textSize="15dp" />

            <View
                style="@style/LineStyle" />

            <EditText
                android:id="@+id/editPasswordInfo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/pwd_tip"
                android:lines="1"
                android:visibility="gone"
                android:textColorHint="@color/text_color_tip_94A0C1"
                android:textSize="13dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"
                android:background="@color/text_color_tip_94A0C1" />

            <LinearLayout
                android:id="@+id/layCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_check_box_selected"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:text="@string/wallet_xieyi"
                    android:textColor="@color/text_color_tip_94A0C1"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txtXy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_xieyi_content"
                    android:textColor="@color/color_4D66FF"
                    android:textSize="13dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_above="@id/wallet_select_import_view"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:background="@color/color_4D66FF"
            android:text="@string/trade_next_step"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/wallet_select_import_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_wallet_sign_two"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/sp_15"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/text_color_tip_94A0C1"
             />
    </RelativeLayout>
</layout>
